# vlark

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml
gtest/: CMakeLists.txt
include/: ast.hpp  parser.hpp  token.h  utils.h
src/: main.cpp  parser.cpp  token.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp  test_token.cpp
testdata/aggr01/: aggr01.tvhdl
